--- a/sass/base/_grid.sass
+++ b/sass/base/_grid.sass
@@ -8,3 +8,7 @@
     grid-template: repeat(2, 1fr) / repeat(2, 320px)
   @media only screen and (max-width: 700px)
     grid-template: repeat(4, 1fr) / 320px
+
+.card-container
+  display: grid
+  grid-template-rows: repeat(3, auto)
