--- a/sass/elements/_card.sass
+++ b/sass/elements/_card.sass
@@ -14,7 +14,7 @@
         padding-bottom: 5px
         font-size: 1.5em
       .icon-container
-        text-align: right
+        justify-self: end
         padding-top: 2em
         .icon
           width: 3rem
