--- a/sass/elements/_card.sass
+++ b/sass/elements/_card.sass
@@ -1,22 +1,23 @@
-.cards
-  .card
-    -webkit-box-shadow: 0px 10px 10px 0px hsl(229, 25%, 86%)
-    -moz-box-shadow:    0px 10px 10px 0px hsl(229, 25%, 86%)
-    box-shadow:         0px 15px 20px 0px hsl(229, 25%, 86%)
-    border-radius: 5px
-    width: 320px
-    margin: 0 auto
-    @media only screen and (max-width: 350px)
-      max-width: 280px
-    .card-container
-      padding: 1.6rem
-      h3
-        padding-bottom: 5px
-        font-size: 1.5em
-      .icon-container
-        justify-self: end
-        padding-top: 2em
-        .icon
-          width: 3rem
-          @media only screen and (min-width: 700px)
-            width: 4rem
+.card
+  -webkit-box-shadow: 0 12px 18px 0 #d7e1ed
+  -moz-box-shadow:    0 12px 18px 0 #d7e1ed
+  box-shadow:         0 12px 18px 0 #d7e1ed
+  border-radius: 5px
+  width: 320px
+  margin: 0 auto
+  @media only screen and (max-width: 350px)
+    max-width: 280px
+  .card-container
+    padding: 1.6rem
+    h3
+      padding-bottom: 5px
+      font-size: 1.5em
+    p
+      font-size: 0.875em
+    .icon-container
+      justify-self: end
+      padding-top: 2em
+      .icon
+        width: 3rem
+        @media only screen and (min-width: 700px)
+          width: 4rem
