--- a/sass/elements/_card.sass
+++ b/sass/elements/_card.sass
@@ -5,6 +5,7 @@
   border-radius: 5px
   width: 320px
   margin: 0 auto
+  background-color: #fff
   @media only screen and (max-width: 350px)
     max-width: 280px
   .card-container
