--- a/style.css
+++ b/style.css
@@ -110,7 +110,8 @@ header {
   box-shadow: 0 12px 18px 0 #d7e1ed;
   border-radius: 5px;
   width: 320px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background-color: #fff; }
   @media only screen and (max-width: 350px) {
     .card {
       max-width: 280px; } }
